Implemented basic unit tests for Array#from, Array#of

--- a/test.html
+++ b/test.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.17.1.css">
+        <script src="http://code.jquery.com/qunit/qunit-1.17.1.js"></script>
         <script type="application/javascript" src="es6-collections.js"></script>
+        <script type="application/javascript" src="test.js"></script>
     </head>
     <body>
+        <div id="qunit"></div>
     </body>
 </html>
